# totalrecall

./: .changie.yaml  .gitignore  Cargo.toml  Containerfile  Containerfile.from-release  README.md  docker-compose.yml  docker-entrypoint.sh
.github/workflows/: build-and-publish.yml  release.yml
crates/browser-debug/: Cargo.toml  README.md
crates/browser-debug/src/: config.rs  inspector.rs  lib.rs  service_config.rs  verification.rs  workflow.rs
crates/media-sync-config/: Cargo.toml
crates/media-sync-config/src/: config.rs  credentials.rs  lib.rs  paths.rs
crates/media-sync-core/: Cargo.toml
crates/media-sync-core/src/: cache.rs  diff.rs  distribution.rs  filter.rs  id_cache.rs  id_cache_storage.rs  id_lookup.rs  id_matching.rs  id_resolver.rs  lib.rs  resolution.rs  sync.rs  update.rs
crates/media-sync-core/src/diff/: tests.rs
crates/media-sync-models/: Cargo.toml
crates/media-sync-models/src/: excluded_item.rs  lib.rs  media.rs  media_ids.rs  rating.rs  review.rs  status.rs  watch_history.rs  watchlist.rs
crates/media-sync-sources/: Cargo.toml
crates/media-sync-sources/src/: capabilities.rs  error.rs  factory.rs  lib.rs  progress.rs  traits.rs
crates/media-sync-sources/src/imdb/: actions.rs  auth.rs  client.rs  debug.rs  download.rs  export.rs  mod.rs  parser.rs  reviews.rs
crates/media-sync-sources/src/imdb/parser/: tests.rs
crates/media-sync-sources/src/plex/: api.rs  auth.rs  client.rs  mod.rs
crates/media-sync-sources/src/simkl/: api.rs  auth.rs  client.rs  mod.rs
crates/media-sync-sources/src/trakt/: api.rs  auth.rs  client.rs  mod.rs
crates/totalrecall-cli/: Cargo.toml
crates/totalrecall-cli/src/: logging.rs  main.rs  output.rs
crates/totalrecall-cli/src/commands/: clear.rs  config.rs  daemon.rs  mod.rs  prompts.rs  sync.rs  sync_ui.rs
