[package]
name = "media-sync-config"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
browser-debug = { path = "../browser-debug", optional = true }
media-sync-models = { path = "../media-sync-models" }

[dev-dependencies]
tempfile = "3"

