[package]
name = "media-sync-core"
version = "0.1.0"
edition = "2021"

[dependencies]
media-sync-models = { path = "../media-sync-models" }
media-sync-sources = { path = "../media-sync-sources" }
media-sync-config = { path = "../media-sync-config" }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = "1.3"
flate2 = "1.0"

[dev-dependencies]
tempfile = "3"

